# ZNS-Visual

./: LICENSE  app.py  pyproject.toml
attached_assets/: Pasted--rateLimits-route-method-allowedRequests-2--1740593799481.txt  Pasted--token-chainId-1-contract-0xc14ea65f0a478c649b7a037bc0ad0a765b49196b--1740587958226.txt  Pasted-An-error-occurred-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-Annotation-1740582086563.txt  Pasted-An-error-occurred-Invalid-value-of-type-builtins-str-received-for-the-color-property-of-scatter-1740583253393.txt  Pasted-Base-Distribution-Configuration-When-a-top-level-domain-is-registered-through-ZNSRootRegistrar-opt-1740572603883.txt  Pasted-Names-and-Hierarchies-ZNS-Name-Rules-No-majuscule-letters-i-e-lowercase-only-Alphanumeric--1740572569140.txt  Pasted-There-are-two-contracts-responsible-for-registering-domains-ZNSRootRegistrar-Top-level-root--1740572550538.txt  Pasted-ZNSRootRegistrar-Main-entry-point-for-the-three-main-flows-of-ZNS-Register-Root-Domain-Reclaim-a-1740573096149.txt  Pasted-ZNSSubRegistrar-ZNSSubRegistrar-sol-The-contract-for-registering-and-revoking-subdomains-of-zNS--1740573108723.txt  Pasted-import-plotly-graph-objects-as-go-import-pandas-as-pd-import-math-Hypothetical-data-replace--1740570970937.txt
data/: nft_data_cache.json  reservoir_data.db  reservoir_data.json
research/: zero_study_research.py
scripts/: fetch_data.py
utils/: contract_helper.py  data_processor.py  export.py  visualization.py
